---
source: tests/insta_test.rs
expression: tester.program().as_ref().unwrap()
---
Program {
    components: [
        ProgramComponent {
            kind: Declaration(
                Declaration {
                    ty_spec: StructOrUnion(
                        WithList(
                            Some(
                                "A",
                            ),
                            [
                                StructDeclaration {
                                    pos: DebugInfo {
                                        pos: Position {
                                            n_char: 4,
                                            n_line: 1,
                                        },
                                    },
                                    ty_spec: StructOrUnion(
                                        WithTag(
                                            "A",
                                        ),
                                    ),
                                    declarator: Declarator {
                                        n_star: 1,
                                        direct_declarator: Ident(
                                            "before",
                                        ),
                                    },
                                },
                                StructDeclaration {
                                    pos: DebugInfo {
                                        pos: Position {
                                            n_char: 4,
                                            n_line: 2,
                                        },
                                    },
                                    ty_spec: Int,
                                    declarator: Declarator {
                                        n_star: 0,
                                        direct_declarator: Ident(
                                            "value",
                                        ),
                                    },
                                },
                                StructDeclaration {
                                    pos: DebugInfo {
                                        pos: Position {
                                            n_char: 4,
                                            n_line: 3,
                                        },
                                    },
                                    ty_spec: StructOrUnion(
                                        WithTag(
                                            "A",
                                        ),
                                    ),
                                    declarator: Declarator {
                                        n_star: 1,
                                        direct_declarator: Ident(
                                            "after",
                                        ),
                                    },
                                },
                            ],
                        ),
                    ),
                    init_declarator: Some(
                        InitDeclarator {
                            declarator: Declarator {
                                n_star: 0,
                                direct_declarator: Ident(
                                    "global_doubly_linked_list",
                                ),
                            },
                            initializer: None,
                        },
                    ),
                    pos: DebugInfo {
                        pos: Position {
                            n_char: 0,
                            n_line: 0,
                        },
                    },
                },
            ),
            pos: DebugInfo {
                pos: Position {
                    n_char: 0,
                    n_line: 0,
                },
            },
        },
        ProgramComponent {
            kind: FuncDef(
                Int,
                Declarator {
                    n_star: 0,
                    direct_declarator: Func(
                        Ident(
                            "main",
                        ),
                        [],
                        true,
                    ),
                },
                Stmt {
                    kind: Block(
                        [
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: StructOrUnion(
                                            WithTag(
                                                "A",
                                            ),
                                        ),
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a1",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 4,
                                                n_line: 7,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Declare(
                                    Declaration {
                                        ty_spec: StructOrUnion(
                                            WithTag(
                                                "A",
                                            ),
                                        ),
                                        init_declarator: Some(
                                            InitDeclarator {
                                                declarator: Declarator {
                                                    n_star: 0,
                                                    direct_declarator: Ident(
                                                        "a2",
                                                    ),
                                                },
                                                initializer: None,
                                            },
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 4,
                                                n_line: 8,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Assign(
                                            Expr {
                                                kind: Member(
                                                    Expr {
                                                        kind: LVar(
                                                            "global_doubly_linked_list",
                                                        ),
                                                        pos: DebugInfo {
                                                            pos: Position {
                                                                n_char: 4,
                                                                n_line: 9,
                                                            },
                                                        },
                                                    },
                                                    "before",
                                                ),
                                                pos: DebugInfo {
                                                    pos: Position {
                                                        n_char: 30,
                                                        n_line: 9,
                                                    },
                                                },
                                            },
                                            Expr {
                                                kind: Addr(
                                                    Expr {
                                                        kind: LVar(
                                                            "a1",
                                                        ),
                                                        pos: DebugInfo {
                                                            pos: Position {
                                                                n_char: 40,
                                                                n_line: 9,
                                                            },
                                                        },
                                                    },
                                                ),
                                                pos: DebugInfo {
                                                    pos: Position {
                                                        n_char: 39,
                                                        n_line: 9,
                                                    },
                                                },
                                            },
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 37,
                                                n_line: 9,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Assign(
                                            Expr {
                                                kind: Member(
                                                    Expr {
                                                        kind: LVar(
                                                            "global_doubly_linked_list",
                                                        ),
                                                        pos: DebugInfo {
                                                            pos: Position {
                                                                n_char: 4,
                                                                n_line: 10,
                                                            },
                                                        },
                                                    },
                                                    "value",
                                                ),
                                                pos: DebugInfo {
                                                    pos: Position {
                                                        n_char: 30,
                                                        n_line: 10,
                                                    },
                                                },
                                            },
                                            Expr {
                                                kind: Num(
                                                    2,
                                                ),
                                                pos: DebugInfo {
                                                    pos: Position {
                                                        n_char: 38,
                                                        n_line: 10,
                                                    },
                                                },
                                            },
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 36,
                                                n_line: 10,
                                            },
                                        },
                                    },
                                ),
                            },
                            Stmt {
                                kind: Expr(
                                    Expr {
                                        kind: Assign(
                                            Expr {
                                                kind: Member(
                                                    Expr {
                                                        kind: LVar(
                                                            "global_doubly_linked_list",
                                                        ),
                                                        pos: DebugInfo {
                                                            pos: Position {
                                                                n_char: 4,
                                                                n_line: 11,
                                                            },
                                                        },
                                                    },
                                                    "after",
                                                ),
                                                pos: DebugInfo {
                                                    pos: Position {
                                                        n_char: 30,
                                                        n_line: 11,
                                                    },
                                                },
                                            },
                                            Expr {
                                                kind: Addr(
                                                    Expr {
                                                        kind: LVar(
                                                            "a2",
                                                        ),
                                                        pos: DebugInfo {
                                                            pos: Position {
                                                                n_char: 39,
                                                                n_line: 11,
                                                            },
                                                        },
                                                    },
                                                ),
                                                pos: DebugInfo {
                                                    pos: Position {
                                                        n_char: 38,
                                                        n_line: 11,
                                                    },
                                                },
                                            },
                                        ),
                                        pos: DebugInfo {
                                            pos: Position {
                                                n_char: 36,
                                                n_line: 11,
                                            },
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            ),
            pos: DebugInfo {
                pos: Position {
                    n_char: 0,
                    n_line: 6,
                },
            },
        },
    ],
}
